[project]
name = "globalcensus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pygris>=0.2.1",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
    "us>=3.2.0",
]
